# awscli_bastion

./: .cookiecutter.json  .flake8  .gitignore  .pre-commit-config.yaml  .pyup.yml  .travis.yml  AUTHORS.rst  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  LICENSE  LICENSE.rst  Makefile  README.rst  mypy.ini  noxfile.py  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: tests.yml
awscli_bastion/: __init__.py  cache.py  cli.py  credentials.py  minimal.py  rotate.py  sts.py
awscli_bastion.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: Makefile  awscli_bastion.rst  conf.py  index.rst  installation.rst  make.bat  modules.rst  reference.rst  requirements.txt  usage.rst
src/awscli_bastion/: __init__.py  __main__.py  auth.py  cache.py  credentials.py  minimal.py  rotate.py
tests/: __init__.py  conftest.py  mock_return_values.py  test-cache  test-credentials  test_auth.py  test_awscli_bastion.py  test_cache.py  test_credentials.py  test_main.py  test_minimal.py  test_rotate.py
